# sf-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
.metadata/: generate.proj  main.cpp
.windows/winmd/: sf.winmd
crates/tools/api/: Cargo.toml
crates/tools/api/src/: main.rs
samples/sf-connect/: Cargo.toml
samples/sf-connect/src/: main.rs
src/: agile.rs  client.rs  error.rs  lib.rs  query.rs  service.rs  types.rs
