[package]
name = "sf-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/tools/*", "samples/*"]

[dependencies]
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros"] }

[dependencies.windows]
version = "0.48.0"
features = ["implement", "Win32_Foundation", "Win32_System_LibraryLoader"]
