[package]
name = "sf-rs"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/tools/*", "samples/*"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-retry = "0.3.0"

[dependencies.windows]
version = "0.48.0"
features = ["implement", "Win32_Foundation", "Win32_System_LibraryLoader"]
