[package]
name = "sf-rs"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "A Rust library for interacting with the Service Fabric COM API on Windows."
repository = "https://github.com/avranju/sf-rs"
readme = "README.md"
keywords = ["service-fabric", "sf"]
categories = ["api-bindings", "external-ffi-bindings"]

[workspace]
members = ["crates/tools/*", "samples/*"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4.20"
num-derive = "0.4.1"
num-traits = "0.2.17"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros"] }
tokio-retry = "0.3.0"

[dependencies.windows]
version = "0.48.0"
features = ["implement", "Win32_Foundation", "Win32_System_LibraryLoader"]
