[package]
name = "sf-connect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
env_logger = "0.10.1"
log = "0.4.20"
sf-rs = { version = "0.1.0", path = "../.." }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "sync", "macros"] }

[dependencies.windows]
version = "0.48.0"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
]
